inseri uma lista

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
       <h1>Olá Mundo</h1>
-      
+      <ul>
+        <li>teste</li>
+        <li>teste</li>
+        <li>teste</li>
+        <li>teste</li>
+        <li>teste</li>
+      </ul>
 </body>
 </html>
